--- a/library.properties
+++ b/library.properties
@@ -4,6 +4,6 @@ author=Bjørn Vegard Tveraaen
 maintainer=Bjørn Vegard Tveraaen
 sentence=PID controller with anti windup and auto/man mode.
 paragraph=A PID controller is a feedback system used in industries to maintain a desired output. It adjusts the system based on the difference between the desired and actual values using three components: Proportional (P), Integral (I), and Derivative (D). These components help reduce errors, improve stability, and minimize oscillations, ensuring efficient control of processes.
-category=PID control
+category=Signal Input/Output
 url=https://github.com/bvtvusn/Arduino_PID_BV
 architectures=* 
